--- a/src/app/contact/components/contact/contact.component.html
+++ b/src/app/contact/components/contact/contact.component.html
@@ -19,6 +19,14 @@
 						<span>CONTACT</span>
 						<span>US</span>
 					</div>
+		<div class="credits">
+			<a href="https://www.facebook.com/Sharmygt-114028513792024" target="_blank">
+			<img src="./../../../../assets/images/svg/fb.svg" class="svg-icon"/>
+			</a>
+			<a href="https://www.instagram.com/sharmy.gt/" target="_blank">
+			<img src="./../../../../assets/images/svg/ig.svg" class="svg-icon"/>
+			</a>
+		</div>
 					<!-- <div class="app-contact">CONTACT INFO : +62 81 314 928 595</div> -->
 				</div>
 				<div class="screen-body-item">
@@ -43,8 +51,6 @@
 				</div>
 			</div>
 		</div>
-		<!-- <div class="credits">
-			
-		</div> -->
+
 	</div>
 </div>
