--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="container">
     <div class="side">
+
+		<img src="assets/images/logo.jpg" class="redondus">
         <p><b>¡Ropa en tendencia bajo Pedido!</b></p>
         <p><b>Ingreso de pedidos de 15 - 20 días</b></p>
         <ul>
