--- a/src/app/admin/components/dashboard/dashboard.component.scss
+++ b/src/app/admin/components/dashboard/dashboard.component.scss
@@ -1,21 +1,80 @@
-.grid-container {
-  margin: 20px;
-}
 
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
+.home-section .home-content{
+  padding-top: 20px;
 }
-
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
+.overview-boxes{
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 20px;
+  margin-bottom: 26px;
 }
-
-.dashboard-card-content {
+.overview-boxes .box{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% / 4 - 30px);
+  background: #fff;
+  padding: 15px 6px;
+  border-radius: 12px;
+  box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
+.overview-boxes .box-topic{
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.home-content .box .number{
+  display: inline-block;
+  font-size: 35px;
+  margin-top: -6px;
+  font-weight: 500;
+}
+.home-content .box .indicator{
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.home-content .box .indicator span.arrow{
+  height: 20px;
+  width: 20px;
+  background: #0077B6;
+  line-height: 20px;
   text-align: center;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 20px;
+  margin-right: 5px;
+}
+.home-content .box .indicator span.down{
+  background: #e87d88;
+}
+.home-content .box .indicator .text{
+  font-size: 12px;
+}
+.home-content .box .cart{
+  display: inline-block;
+  font-size: 32px;
+  height: 50px;
+  width: 50px;
+  background: #cce5ff;
+  line-height: 50px;
+  text-align: center;
+  color: #66b0ff;
+  border-radius: 12px;
+  margin: -15px 0 0 6px;
+}
+.home-content .box .cart.two{
+  color: #2BD47D;
+  background: #C0F2D8;
+}
+.home-content .box .cart.three{
+  color: #ffc233;
+  background: #ffe8b3;
+}
+.home-content .box .cart.four{
+  color: #e05260;
+  background: #f7d4d7;
 }
