--- a/src/app/admin/components/products-list/products-list.component.html
+++ b/src/app/admin/components/products-list/products-list.component.html
@@ -1,25 +1,71 @@
-<a mat-raised-button routerLink="create">Crear nuevo producto</a>
+<!-- Choose of the template -->
+<ng-template *ngIf="product.length === 0; then NotProducts; else Products">
+</ng-template>
 
-<table mat-table [dataSource]="product" class="mat-elevation-z8 products-table">
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
-        <td mat-cell *matCellDef="let product">{{product.id}}</td>
-    </ng-container>
-    <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>TITLE</th>
-        <td mat-cell *matCellDef="let product">{{product.title}}</td>
-    </ng-container>
-    <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef>PRICE</th>
-        <td mat-cell *matCellDef="let product">{{product.price}}</td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>ACTIONS</th>
-        <td mat-cell *matCellDef="let product">
-            <button mat-raised-button [routerLink]="['edit', product.id]">Editar</button>
-            <button mat-raised-button color="warn" (click)="deleteProduct(product.id)">Eliminar</button>
-        </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+<!-- Message of There aren't products -->
+<ng-template #NotProducts>
+	<p class="consult-prod"><b>No hay productos que mostrar</b></p>
+</ng-template>
+
+<!-- List of Products -->
+<ng-template #Products>
+	<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 products-table">
+		<!-- Image's Column -->
+		<ng-container matColumnDef="image">
+			<th mat-header-cell *matHeaderCellDef> No. </th>
+			<td mat-cell *matCellDef="let prod">
+				<img class="image" [src]="prod.image" width="80" height="80">
+			</td>
+		</ng-container>
+
+		<!-- Title's Column -->
+		<ng-container matColumnDef="title">
+			<th mat-header-cell *matHeaderCellDef> Título </th>
+			<td mat-cell *matCellDef="let prod">{{prod.title}}</td>
+		</ng-container>
+
+		<!-- Price's Column -->
+		<ng-container matColumnDef="price">
+			<th mat-header-cell *matHeaderCellDef> Precio </th>
+			<td mat-cell *matCellDef="let prod">{{prod.price}}</td>
+		</ng-container>
+
+		<!-- Category's Column -->
+		<ng-container matColumnDef="category">
+			<th mat-header-cell *matHeaderCellDef> Categorias </th>
+			<td mat-cell *matCellDef="let prod">{{prod.category}}</td>
+		</ng-container>
+
+		<!-- Size's Column -->
+		<ng-container matColumnDef="sizes">
+			<th mat-header-cell *matHeaderCellDef> Tallas </th>
+			<td mat-cell *matCellDef="let prod">
+				<mat-chip-list class="sizes">
+					<mat-chip class="sizes-chip" *ngFor="let size of prod.sizes">
+						{{size}}
+					</mat-chip>
+				</mat-chip-list>
+			</td>
+		</ng-container>
+
+		<!-- Action's Column -->
+		<ng-container matColumnDef="actions">
+			<th mat-header-cell *matHeaderCellDef> Acciones </th>
+			<td mat-cell *matCellDef="let prod">
+				<button mat-mini-fab color="primary" class="btn-actions" [routerLink]="['edit/', prod.id]">
+					<mat-icon>edit</mat-icon>
+				</button>
+				<button mat-mini-fab color="accent" class="btn-actions" (click)="openDialog(prod.id)">
+					<mat-icon>delete</mat-icon>
+				</button>
+			</td>
+		</ng-container>
+
+		<!-- Put the columns of the table -->
+		<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+	</table>
+</ng-template>
+
+<!-- BTN Create a new product -->
+<a mat-raised-button class="btn-create-prod" routerLink="create" color="primary">Crear nuevo producto</a>
