--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -7,6 +7,13 @@
     margin: 100px 50px;
 }
 
+.redondus{
+	border-radius: 100%;
+	height: 100px;
+	width: 100px;
+	margin: 0 50px;
+}
+
 @media (max-width: 1024px){
     .side {
         margin: 100px 30px;
