--- a/src/app/order/components/order/order.component.scss
+++ b/src/app/order/components/order/order.component.scss
@@ -1,12 +1,15 @@
 .stepper {
     margin: 30px 0;
+	color: white;
 }
+
 .container {
     color: white;
 }
 .products-table {
     width: 96%;
     margin: 2%;
+	background-color: #A53860;
 }
 
 .btn-cant {
@@ -24,4 +27,31 @@
 
 .mat-form-field {
     margin-top: 16px;
+}
+
+.total-table{
+    display: flex;
+    justify-content:flex-end;
+    margin: 0 11%;
+
+    th{
+        text-transform: uppercase;
+        margin: 0 10px;
+    }
+}
+
+.form{
+    margin: 0 40%;
+
+    .container{
+       justify-content: center;
+    }
+}
+
+mat-radio-group{
+    margin: 20px;
+    .radio-group{
+        display: flex;
+        margin: 5px;
+    }
 }
