--- a/src/app/product/components/products/products.component.scss
+++ b/src/app/product/components/products/products.component.scss
@@ -3,7 +3,23 @@
     margin-bottom: 50px;
 }
 
-.container{
+.container {
     color: black;
     margin: 30px 0;
+}
+
+.example-small-box,
+.example-large-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 16px;
+    padding: 16px;
+    border-radius: 8px;
+}
+
+.example-small-box {
+    height: 100px;
+    width: 100px;
+    display: flex;
 }
