--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 
 .container {
     width: 100%;
+	min-height: 52.5%;
     padding-right: 0px;
     padding-left: 0px;
     margin-right: auto;
@@ -15,6 +16,7 @@
 }
 .footer {
     width: 100%;
+	min-height: 20%;
 }
 
 @media (min-width: 576px)  {
